# compiz-plugins-main

./: configure.ac
metadata/: Makefile.am  geochg.xml.in
src/: Makefile.am
src/geochg/: Makefile.am  geochg.c
